hphp/test/zend/good/ext/standard/tests/array/bug33989.php
<?php
$a="a";
extract($GLOBALS, EXTR_REFS);
echo "ok\n";
?>