hphp/test/zend/bad/ext-libxml/bug63389.php
<?php
$fp = fopen("php://input", "r");
libxml_set_streams_context($fp);
libxml_set_streams_context("a");
echo "okey";
?>